--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "firebase": "^11.4.0",
     "firebase-admin": "^13.1.0",
+    "jose": "^6.0.8",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "react": "^19.0.0",
